--- a/public/scss/partials/_nav.scss
+++ b/public/scss/partials/_nav.scss
@@ -17,6 +17,9 @@
             width: 5rem;
             height: 5rem;
             border-radius: 50%;
+            &:hover{
+                cursor: pointer;
+            }
             i{
                 font-size: 35px;
             }
