--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,11 +29,6 @@
   background-color: #AD1629;
 }
 
-.cardBG {
-  background-image: url("../../images/cardBG.jpg");
-  background-position: center;
-}
-
 html {
   height: 100%;
   width: 100%;
@@ -44,8 +39,75 @@ body {
 }
 
 .cardBG {
-  background-image: url("../images/cardBG.jpg");
+  background-image: url("../images/greenbackg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.footerFlex {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 13rem;
+}
+.footerFlex .topFooter {
+  height: 28%;
+  display: flex;
+  background-image: url("../images/topWood.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: xx-large;
+  font-family: "lucky";
+  box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.75);
+  z-index: 1;
+}
+.footerFlex .bottomFooter {
+  height: 72%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 0;
+  background-image: url("../images/bottomWood.avif");
+  background-position: center;
+}
+.footerFlex .bottomFooter .bottomBtn {
+  width: 28%;
+  text-align: center;
+  flex-direction: row;
+  border: 1px solid black;
+  border-radius: 50px;
+  background-color: white;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.footerFlex .bottomFooter .bottomBtn img {
+  height: 3rem;
+}
+.footerFlex .bottomFooter .bottomTime {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 3rem;
+  font-family: "lucky";
+}
+.footerFlex .bottomFooter .resetBtn {
+  background-color: #F6DF06;
+  font-family: "lucky";
+  font-size: 2.5rem;
+  padding: none;
+}
+
+@font-face {
+  font-family: "lucky";
+  src: url(../fonts/LuckiestGuy-Regular.ttf);
 }
