--- a/public/scss/partials/_body.scss
+++ b/public/scss/partials/_body.scss
@@ -7,7 +7,7 @@ body{
 }
 
 .cardBG{
-    background-image: url('../images/cardBG.jpg');
+    background-image: url('../images/greenbackg.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
