--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -58,6 +58,9 @@
         font-family: 'lucky';
         font-size: 2.5rem;
         padding: none;
+        &:hover{
+            cursor: pointer;
+        }
     }
     }
 }
