--- a/public/scss/partials/_nav.scss
+++ b/public/scss/partials/_nav.scss
@@ -24,7 +24,7 @@
                 font-size: 35px;
             }
         }
-        .navAudio{
+        .navScore{
             background-color: #72408B;
             
         }
