worked on the dashboard

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,14 +1,14 @@
-<html>
-    <head>
-        <title>MEMORY GAME</title>
-        <link rel="stylesheet" href="../styles/css/style.css">
-        <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
-        <script src="./script.js"></script>
-        
-    </head>
+<!DOCTYPE html>
+<html lang="en">
 
-    <body>
-        <%- body %>
-    </body>
-    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="views/public/css/style.css">
+    <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
+    <title>The Memory Game</title>
+</head>
+<body>
+    <%- body %>
+</body>  
 </html>
