--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="../public/style.css">
+        <link rel="stylesheet" href="views/public/css/style.css">
     </head>
     
     <h1>WELCOME TO THE MEMORY GAME</h1>
