--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,3 +1,22 @@
-<h1>Dashboard</h1>
-<p>Welcome <%= user.first_name %>
-</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Dashboard</title>
+</head>
+
+<body>
+    <h1>Dashboard</h1>
+    <p>Welcome <%= user.first_name %>
+            <%= user.last_name %>
+    </p>
+
+    <h2>Top 10 Users</h2>
+    <ul id="top-users">
+        <!-- User data will be dynamically inserted here -->
+    </ul>
+
+    <script src="dashboard.js"></script>
+</body>
+
+</html>
