--- a/views/public/scss/partials/_nav.scss
+++ b/views/public/scss/partials/_nav.scss
@@ -1,48 +1,35 @@
-.navFlex {
+.navFlex{
     margin: {
         left: 1rem;
         right: 1rem;
         top: .5rem;
-    }
-
-    ;
+    };
     height: 8rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    .navLogo {
+    .navLogo{
         height: 100%;
         transform: rotate(0);
     }
-
-    div {
+    div{
         .navBtn {
             width: 5rem;
             height: 5rem;
             border-radius: 50%;
-
-            &:hover {
+            &:hover{
                 cursor: pointer;
             }
-
-            i {
+            i{
                 font-size: 35px;
             }
         }
-
-        .navAudio {
+        .navScore{
             background-color: #72408B;
-
+            
         }
-
-        .navQuit {
+        .navQuit{
             background-color: #AD1629;
         }
     }
-}
-
-.cardBG {
-    background-image: url('../../images/cardBG.jpg');
-    background-position: center;
 }
