--- a/views/public/scss/style.scss
+++ b/views/public/scss/style.scss
@@ -1,1 +1,1 @@
-@import './partials/footer', './partials/nav', './partials/body', './partials/reset', './partials/utilities';
+@import './partials/nav', './partials/body', './partials/footer';
