--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -24,7 +24,7 @@
     z-index: 1;
     }
     .bottomFooter{
-    height: 72%;
+    height: 78%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -32,15 +32,13 @@
     background-image: url('../images/bottomWood.avif');  
         background-position: center;
     .bottomBtn {
-        width: 28%;
+        width: 22%;
         text-align: center;
         flex-direction: row;
         border: 1px solid black;
         border-radius: 50px;
         background-color: white;
         padding: {
-            top: 1rem;
-            bottom: 1rem;
         };
         img{
             height: 3rem;
@@ -50,16 +48,19 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        font-size: 3rem;
+        font-size: 5rem;
         font-family: 'lucky';
+        
     }
     .resetBtn{            
         background-color: #F6DF06;
         font-family: 'lucky';
-        font-size: 2.5rem;
+        font-size: 5rem;
         padding: none;
         &:hover{
             cursor: pointer;
+            background-color: black;
+            color: #F6DF06;
         }
     }
     }
