--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-    <title>Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bckg">
     <h1>Dashboard</h1>
     <p>Welcome <%= user.first_name %>
             <%= user.last_name %>
     </p>
+    
+    <a href="game.ejs">Start Game</a>
 
-    <h2>Top 10 Users</h2>
-    <ul id="top-users">
-        <!-- User data will be dynamically inserted here -->
-    </ul>
-
-    <script src="dashboard.js"></script>
+    <a href="/users/logout">Logout</a>
+    
+    <h1>ScoreBoard</h1>
+    <p>Users with the best time</p>
 </body>
-
-</html>
