--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,3 +1,8 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
+</head>
+
 <h1>Register</h1>
 <%- include ('../partials/messages') %>
 <form action = "/users/register" method="POST">
