--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -1,17 +1,22 @@
 <html>
     <head>
-        <link rel="stylesheet" href="views/public/css/style.css">
+        <link rel="stylesheet" type="text/css" href="public/css/style.css">
+        <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
     </head>
-    
-    <h1>WELCOME TO THE MEMORY GAME</h1>
-    <p>OUR “MEMORY GAME” reinvents a classic memory-matching game that offers a fun and challenging experience. But you can
+<body class="bckg cardBG">
+    <nav class="navFlex">
+
+        <img src="./images/memory.png" alt="" class="navLogo navlogo">
+    </nav>
+    <p class="text">OUR “MEMORY GAME” reinvents a classic memory-matching game that offers a fun and challenging experience. But you can
         also our game online anywhere at any time. The game's objective is to memorize the location of the correct cards and
         match them with the correct card. Each level has a time limit; the shorter you complete a level, the more stars you
         get.</p>
-    
-    <p>Creat an account or login</p>
-    <a href="/users/register">Register</a>
-    <a href="/users/login">Login</a>
-    
-    <% utils.foo() %>
+
+    <div>
+        <p class="stext">Creat an account or Login Here: </p>
+        <a href="/users/register">Register</a>
+        <a href="/users/login">Login</a>
+    </div>
+</body>
 </html>
