--- a/views/public/css/style.css
+++ b/views/public/css/style.css
@@ -1,34 +1,3 @@
-.navFlex {
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 0.5rem;
-  height: 8rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.navFlex .navLogo {
-  height: 100%;
-  transform: rotate(0);
-}
-.navFlex div .navBtn {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-}
-.navFlex div .navBtn:hover {
-  cursor: pointer;
-}
-.navFlex div .navBtn i {
-  font-size: 35px;
-}
-.navFlex div .navScore {
-  background-color: #72408B;
-}
-.navFlex div .navQuit {
-  background-color: #AD1629;
-}
-
 html {
   height: 100%;
   width: 100%;
@@ -123,7 +92,7 @@ body {
   z-index: 1;
 }
 .footerFlex .bottomFooter {
-  height: 72%;
+  height: 78%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -132,14 +101,12 @@ body {
   background-position: center;
 }
 .footerFlex .bottomFooter .bottomBtn {
-  width: 28%;
+  width: 22%;
   text-align: center;
   flex-direction: row;
   border: 1px solid black;
   border-radius: 50px;
   background-color: white;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 .footerFlex .bottomFooter .bottomBtn img {
   height: 3rem;
@@ -148,20 +115,163 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 3rem;
+  font-size: 5rem;
   font-family: "lucky";
 }
 .footerFlex .bottomFooter .resetBtn {
   background-color: #F6DF06;
   font-family: "lucky";
-  font-size: 2.5rem;
+  font-size: 5rem;
   padding: none;
 }
 .footerFlex .bottomFooter .resetBtn:hover {
   cursor: pointer;
+  background-color: black;
+  color: #F6DF06;
 }
 
 @font-face {
   font-family: "lucky";
   src: url(../fonts/LuckiestGuy-Regular.ttf);
 }
+.navFlex {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 0.5rem;
+  height: 8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navFlex .navLogo {
+  height: 100%;
+  transform: rotate(0);
+}
+.navFlex div .navBtn {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+}
+.navFlex div .navBtn:hover {
+  cursor: pointer;
+}
+.navFlex div .navBtn i {
+  font-size: 35px;
+}
+.navFlex div .navScore {
+  background-color: #72408B;
+}
+.navFlex div .navQuit {
+  background-color: #AD1629;
+}
+
+html,
+body,
+div,
+span,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+pre,
+a,
+address,
+code,
+del,
+em,
+img,
+ins,
+strike,
+strong,
+sub,
+sup,
+var,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+canvas,
+footer,
+header,
+menu,
+nav,
+section,
+summary {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+@font-face {
+  font-family: "lucky";
+  src: url(../fonts/LuckiestGuy-Regular.ttf);
+}
+* {
+  margin: 1rem;
+  padding: 1rem;
+  font-family: "lucky";
+  color: rgba(61, 61, 61, 0.8666666667);
+}
+
+.bckg {
+  background: rgb(42, 157, 78);
+  background: linear-gradient(#fff, rgb(42, 157, 78) 46%);
+}
+
+.navlogo {
+  position: relative;
+  top: 7rem;
+  left: 32rem;
+  width: 29rem;
+  height: 49rem;
+}
+
+.text {
+  margin-top: 1.5rem;
+  text-align: center;
+  font-size: 2rem;
+  width: 64rem;
+  height: 25rem;
+  position: relative;
+  top: 9rem;
+  left: 16rem;
+  color: rgba(61, 61, 61, 0.8666666667);
+}
+
+.stext {
+  text-align: center;
+  font-size: 16px;
+  width: 40rem;
+  height: 25rem;
+  position: relative;
+  top: 17rem;
+  left: 17rem;
+  margin-top: -15rem;
+}/*# sourceMappingURL=style.css.map */
