--- a/views/public/scss/style.scss
+++ b/views/public/scss/style.scss
@@ -1,1 +1,49 @@
-@import './partials/nav', './partials/body', './partials/footer';
+@import './partials/body', './partials/footer', './partials/nav','./partials/reset';
+
+@font-face {
+    font-family: 'lucky';
+    src: url(../fonts/LuckiestGuy-Regular.ttf);
+}
+
+*{
+    margin: 1rem;
+    padding: 1rem;
+    font-family: "lucky";
+    color: #3d3d3ddd;
+}
+
+.bckg{
+    background: rgb(42, 157, 78);
+    background: linear-gradient(#fff, rgba(42, 157, 78, 1) 46%);
+}
+
+.navlogo{
+    position: relative;
+    top: 7rem;
+    left: 32rem;
+    width: 29rem;
+    height: 49rem;
+}
+
+.text{
+    margin-top: 1.5rem;
+    text-align: center;
+    font-size: 2rem;
+    width: 64rem;
+    height: 25rem;
+    position: relative;
+    top: 9rem;
+    left: 16rem;
+    color: #3d3d3ddd;
+}
+
+.stext {
+    text-align: center;
+    font-size: 16px;
+    width: 40rem;
+    height: 25rem;
+    position: relative;
+    top: 17rem;
+    left: 17rem;
+    margin-top: -15rem;
+}
