I fixed the mapping

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -9,7 +9,7 @@
             <%= user.last_name %>
     </p>
     
-    <a href="game.ejs">Start Game</a>
+    <a href="/game">Start Game</a>
 
     <a href="/users/logout">Logout</a>
     
