--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -4,15 +4,13 @@
 </head>
 
 <body class="bckg">
-    <h1>Dashboard</h1>
-    <p>Welcome <%= user.first_name %>
-            <%= user.last_name %>
-    </p>
+    <h1 class="text">Dashboard</h1>
+    <p class="stext">Welcome <%= user.first_name %></p>
     
-    <a href="game.ejs">Start Game</a>
+    <a class="astext" href="game.ejs">Start Game</a>
 
-    <a href="/users/logout">Logout</a>
+    <a  class="astext" href="/users/logout">Logout</a>
     
-    <h1>ScoreBoard</h1>
-    <p>Users with the best time</p>
+    <h1 class="text">ScoreBoard</h1>
+    <p class="stext">Users with the best time</p>
 </body>
