--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -8,10 +8,10 @@
 
         <img src="./images/memory.png" alt="" class="navLogo">
         <div>
-            <button class="navBtn navScore" onclick="window.location.href='./scoreboard.html';">
+            <button class="navBtn navScore" onclick="window.location.href='dashboard.ejs';">
                 <i class="fa-solid fa-star" style="color: #ffffff;"></i>
             </button>
-            <button class="navBtn navQuit" onclick="window.location.href='./login.html';">
+            <button class="navBtn navQuit" onclick="window.location.href='/users/logout';">
                 <i class="fa-solid fa-right-from-bracket" style="color: #ffffff;"></i>
             </button>
         </div>
