--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -3,7 +3,7 @@
         <link rel="stylesheet" type="text/css" href="public/css/style.css">
         <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
     </head>
-<body class="bckg cardBG">
+<body class="bckg">
     <nav class="navFlex">
         <img src="./images/memory.png" alt="" class="navlogo">
     </nav>
