fixed the dashboard

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -4,9 +4,9 @@
 </head>
 
 <body class="bckg">
-    <h1 class="text">Dashboard</h1>
+    <h1 class="text">Dashboard
     <p class="stext">Welcome <%= user.first_name %></p>
-    
+    </h1>
     <a class="astext" href="game.ejs">Start Game</a>
 
     <a  class="astext" href="/users/logout">Logout</a>
