--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -8,7 +8,7 @@
     <h1 class="text">Dashboard
     <p class="stext">Welcome <%= user.first_name %></p>
     </h1>
-    <a class="astext" href="game.ejs">Start Game</a>
+    <a class="astext" href="/game">Start Game</a>
 
     <a  class="astext" href="/users/logout">Logout</a>
     
