--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -8,7 +8,7 @@
 
         <img src="./images/memory.png" alt="" class="navLogo">
         <div>
-            <button class="navBtn navScore" onclick="window.location.href='dashboard.ejs';">
+            <button class="navBtn navScore" onclick="window.location.href='/dashboard';">
                 <i class="fa-solid fa-star" style="color: #ffffff;"></i>
             </button>
             <button class="navBtn navQuit" onclick="window.location.href='/users/logout';">
