--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,17 +4,24 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 
-<h1>
-    <%= include ('../partials/messages') %>
-    <form action="/users/login" method="POST">
-        <div>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Enter Email">
-        </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="Enter Password">
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-    </form>
-</h1>
+<div class="container>
+    <div class="slider"></div>
+    <div class="btn">
+        <button class="login" onclick="window.location.href='/login';">Login</button>
+        <button class="signup" onclick="window.location.href='/register';">Signup</button>
+    </div>
+    <h1>
+        <%= include ('../partials/messages') %>
+            <form action="/users/login" method="POST">
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Enter Email">
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" placeholder="Enter Password">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Login</button>
+            </form>
+    </h1>
+</div>
